@@ -1,3 +1,7 @@
+2008-12-01  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclParse.c:  Coding standards fixups.
+
 2008-12-01  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/cmdAH.test (cmdAH-32.6): Test was not portable; depended on a
